Add menu & contact us pages using modular javascript

--- a/src/template.html
+++ b/src/template.html
@@ -8,13 +8,13 @@
 <body>
     <header>
         <nav>
-            <button type="button" class="home" title="home"></button>
-            <button type="button" class="menu" title="menu"></button>
-            <button type="button" class="about" title="about"></button>
+            <button type="button" class="home" title="Home"></button>
+            <button type="button" class="menu" title="Menu"></button>
+            <button type="button" class="contact-us" title="Contact Us"></button>
         </nav>
     </header>
     <div id="content">
     </div>
-    <footer>FOOTER</footer>
+    <footer><a href="https://github.com/competitive-flamingo/restaurant-page" target="_blank">competitive-flamingo</a></footer>
 </body>
 </html>
